--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -22,6 +22,9 @@ class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.E
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_UNKNOWN_COMMIT_NR__EXPR_COMMIT = Die angegebene Commit-Nummer {1} ist unbekannt: {0}
 class.com.top_logic.model.search.expr.config.operations.security.I18NConstants.ERROR_NOT_A_ROLE__VAL_EXPR = Argument {0} ist keine Rolle in: {1}
 class.com.top_logic.model.search.expr.config.operations.security.I18NConstants.ERROR_NO_SUCH_ACCOUNT__VAL_EXPR = Es gibt kein Zugang mit dem Namen {0} in: {1}
+class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_CREATING_CONFIGURATION__TYPE_MSG = Die Konfiguration "{0}" konnte nicht instanziiert werden: {1}
+class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_NO_SUCH_CLASS__NAME = Keine solche Klasse: {0}
+class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_PARSING_CONFIGURATION_VALUE__PROP_VAL_MSG = Das Parsen des Konfigurationswertes "{1}" für die Eigenschaft "{0}" ist fehlgeschlagen: {2}
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_DESCRIPTION_HEADER = Beschreibung
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_NO_DESCRIPTION = Keine Beschreibung verfügbar.
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_COLUMN_DEFAULT = Standard
@@ -686,6 +689,8 @@ com.top_logic.model.search.expr.config.operations.struct.NewStruct$Builder = Ers
 com.top_logic.model.search.expr.config.operations.struct.NewStruct$Builder.tooltip = <i>Methodenersteller</i>, der eine <i>neue struct</i>.
 com.top_logic.model.search.expr.config.operations.struct.StructTypeDef$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.struct.StructTypeDef$Builder.tooltip = <i>Methodenersteller</i>, der den <i>Strukturtyp def</i>.
+com.top_logic.model.search.expr.config.operations.struct.ToConfig$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.struct.ToConfig$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur <i>Konfiguration</i>.
 com.top_logic.model.search.expr.config.operations.struct.Values$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.struct.Values$Builder.tooltip = <i>Methodenersteller</i>, der <i>Werte</i> erzeugt.
 com.top_logic.model.search.expr.config.operations.web.ContextPath$Builder = Ersteller
