--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -22,6 +22,9 @@ class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.E
 class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.ERROR_UNKNOWN_COMMIT_NR__EXPR_COMMIT = The given commit number {1} is unknown: {0}
 class.com.top_logic.model.search.expr.config.operations.security.I18NConstants.ERROR_NOT_A_ROLE__VAL_EXPR = Argument {0} is not a role in: {1}
 class.com.top_logic.model.search.expr.config.operations.security.I18NConstants.ERROR_NO_SUCH_ACCOUNT__VAL_EXPR = There is no account with name {0} in: {1}
+class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_CREATING_CONFIGURATION__TYPE_MSG = Failed to instantiate configuration "{0}": {1}
+class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_NO_SUCH_CLASS__NAME = No such class: {0}
+class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_PARSING_CONFIGURATION_VALUE__PROP_VAL_MSG = Failed parse configuration value "{1}" for property "{0}": {2}
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_DESCRIPTION_HEADER = Description
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_NO_DESCRIPTION = No description available.
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_COLUMN_DEFAULT = Default
@@ -686,6 +689,8 @@ com.top_logic.model.search.expr.config.operations.struct.NewStruct$Builder = Bui
 com.top_logic.model.search.expr.config.operations.struct.NewStruct$Builder.tooltip = <i>Method builder</i> creating <i>new struct</i>.
 com.top_logic.model.search.expr.config.operations.struct.StructTypeDef$Builder = Builder
 com.top_logic.model.search.expr.config.operations.struct.StructTypeDef$Builder.tooltip = <i>Method builder</i> creating <i>struct type def</i>.
+com.top_logic.model.search.expr.config.operations.struct.ToConfig$Builder = Builder
+com.top_logic.model.search.expr.config.operations.struct.ToConfig$Builder.tooltip = <i>Method builder</i> creating <i>to configuration</i>.
 com.top_logic.model.search.expr.config.operations.struct.Values$Builder = Builder
 com.top_logic.model.search.expr.config.operations.struct.Values$Builder.tooltip = <i>Method builder</i> creating <i>values</i>.
 com.top_logic.model.search.expr.config.operations.web.ContextPath$Builder = Builder
