Ticket #28022: Added access to application configuration.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -12,6 +12,10 @@ class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_SING
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_THREE_ARGUMENTS_EXPECTED__CNT_EXPR = Three arguments expected but got {0} in: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_TWO_ARGUMENTS_EXPECTED__CNT_EXPR = Two arguments expected but got {0} in: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_UNEXPECTED_ARGUMENT__FUN_CNT = Unexpected number of arguments in call of function "{0}", the function expects no more than {1} arguments.
+class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_ACCESS_TO_CONFIGURATION_FAILED__NAME_MSG = Access to the configuration ''{0}'' failed: {1}
+class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_EITHER_SEVICE_OR_CONFIG = Either the <code>service</code> or the <code>config</code> argument must be given, not both.
+class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_INVALID_CONFIGURATION_TYPE__NAME_EXPECTED = Invalid configuration type ''{0}'', must be a sub-type of ''{1}''.
+class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_NO_SUCH_CONFIGURATION_TYPE__NAME = The given configuration type ''{0}'' does not exist.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_BINARY_DATA_EXPECTED__ACTUAL_EXPR = Binary data expected in "{1}" but got "{0}".
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_CONVERSION_FAILED__MSG_EXPR = Conversion in "{1}" failed: {0}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CELL_ENTRY__VALUE_MSG = Headers should be in the same row "{1}" but got "{0}".
@@ -583,6 +587,8 @@ com.top_logic.model.search.expr.config.operations.Type$Builder = Builder
 com.top_logic.model.search.expr.config.operations.Type$Builder.tooltip = <i>Method builder</i> creating <i>type</i>.
 com.top_logic.model.search.expr.config.operations.UnionBuilder = Union builder
 com.top_logic.model.search.expr.config.operations.UnionBuilder.tooltip = <i>Method builder</i> creating <i>unions</i>.
+com.top_logic.model.search.expr.config.operations.app.GetAppConfig$Builder = Builder
+com.top_logic.model.search.expr.config.operations.app.GetAppConfig$Builder.tooltip = <i>Method builder</i> creating <i>get app configuration</i>.
 com.top_logic.model.search.expr.config.operations.app.GetDBConfig$Builder = Builder
 com.top_logic.model.search.expr.config.operations.app.GetDBConfig$Builder.tooltip = <i>Method builder</i> creating <i>get database configuration</i>.
 com.top_logic.model.search.expr.config.operations.arithmetic.Ceil$Builder = Builder
