--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -12,6 +12,10 @@ class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_SING
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_THREE_ARGUMENTS_EXPECTED__CNT_EXPR = Es wurden drei Argumente erwartet, aber {0} sind eingegangen: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_TWO_ARGUMENTS_EXPECTED__CNT_EXPR = Zwei Argumente werden erwartet, aber {0} wurden eingegeben: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_UNEXPECTED_ARGUMENT__FUN_CNT = Unerwartete Anzahl von Argumenten beim Aufruf der Funktion "{0}", die Funktion erwartet nicht mehr als {1} Argumente.
+class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_ACCESS_TO_CONFIGURATION_FAILED__NAME_MSG = Zugriff auf die Konfiguration ''{0}'' fehlgeschlagen: {1}
+class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_EITHER_SEVICE_OR_CONFIG = Es muss entweder das Argument <code>service</code> oder das Argument <code>config</code> angegeben werden, nicht beide.
+class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_INVALID_CONFIGURATION_TYPE__NAME_EXPECTED = Ungültiger Konfigurationstyp ''{0}'', muss ein Subtyp von ''{1}'' sein.
+class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_NO_SUCH_CONFIGURATION_TYPE__NAME = Der angegebene Konfigurationstyp ''{0}'' existiert nicht.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_BINARY_DATA_EXPECTED__ACTUAL_EXPR = In "{1}" werden Binäre Daten erwartet, erhalten wurde aber "{0}".
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_CONVERSION_FAILED__MSG_EXPR = Umwandlung in "{1}" fehlgeschlagen: {0}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CELL_ENTRY__VALUE_MSG = Kopfzeilen sollten in der gleichen Zeile{1}" sein, aber{0}" bekommen.
@@ -583,6 +587,8 @@ com.top_logic.model.search.expr.config.operations.Type$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.Type$Builder.tooltip = <i>Method Builder</i> erstellt <i>Typ</i>.
 com.top_logic.model.search.expr.config.operations.UnionBuilder = Gewerkschaftserrichter
 com.top_logic.model.search.expr.config.operations.UnionBuilder.tooltip = <i>Methodenbauer, der</i> <i>Gewerkschaften</i> gründet.
+com.top_logic.model.search.expr.config.operations.app.GetAppConfig$Builder = Ersteller
+com.top_logic.model.search.expr.config.operations.app.GetAppConfig$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur Erstellung von <i>Get-App-Konfigurationen</i>.
 com.top_logic.model.search.expr.config.operations.app.GetDBConfig$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.app.GetDBConfig$Builder.tooltip = <i>Erbauer</i> der <i>Methode</i> zum <i>Abrufen der Datenbankkonfiguration</i>.
 com.top_logic.model.search.expr.config.operations.arithmetic.Ceil$Builder = Ersteller
