Ticket #28022: Report error if no argument is given.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -27,6 +27,7 @@ class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.E
 class.com.top_logic.model.search.expr.config.operations.security.I18NConstants.ERROR_NOT_A_ROLE__VAL_EXPR = Argument {0} ist keine Rolle in: {1}
 class.com.top_logic.model.search.expr.config.operations.security.I18NConstants.ERROR_NO_SUCH_ACCOUNT__VAL_EXPR = Es gibt kein Zugang mit dem Namen {0} in: {1}
 class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_CREATING_CONFIGURATION__TYPE_MSG = Die Konfiguration "{0}" konnte nicht instanziiert werden: {1}
+class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_EITHER_INTERFACE_OR_CLASS__EXPR = Es muss entweder eine Schnittstelle oder ein Klassenname angegeben werden: {0}
 class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_NO_SUCH_CLASS__NAME = Keine solche Klasse: {0}
 class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_PARSING_CONFIGURATION_VALUE__PROP_VAL_MSG = Das Parsen des Konfigurationswertes "{1}" für die Eigenschaft "{0}" ist fehlgeschlagen: {2}
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_DESCRIPTION_HEADER = Beschreibung
