--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -27,6 +27,7 @@ class.com.top_logic.model.search.expr.config.operations.revision.I18NConstants.E
 class.com.top_logic.model.search.expr.config.operations.security.I18NConstants.ERROR_NOT_A_ROLE__VAL_EXPR = Argument {0} is not a role in: {1}
 class.com.top_logic.model.search.expr.config.operations.security.I18NConstants.ERROR_NO_SUCH_ACCOUNT__VAL_EXPR = There is no account with name {0} in: {1}
 class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_CREATING_CONFIGURATION__TYPE_MSG = Failed to instantiate configuration "{0}": {1}
+class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_EITHER_INTERFACE_OR_CLASS__EXPR = Either interface or class name must be given: {0}
 class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_NO_SUCH_CLASS__NAME = No such class: {0}
 class.com.top_logic.model.search.expr.config.operations.struct.I18NConstants.ERROR_PARSING_CONFIGURATION_VALUE__PROP_VAL_MSG = Failed parse configuration value "{1}" for property "{0}": {2}
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_DESCRIPTION_HEADER = Description
