--- a/com.top_logic.basic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.basic/src/main/java/META-INF/messages_en.properties
@@ -1066,10 +1066,10 @@ com.top_logic.basic.sql.DBDeferability = Deferability
 com.top_logic.basic.sql.DBDeferability.DEFERRED = Deferred
 com.top_logic.basic.sql.DBDeferability.DEFERRED.tooltip = Constraint is checked during commit.
 com.top_logic.basic.sql.DBDeferability.IMMEDIATE = Immediate
-com.top_logic.basic.sql.DBDeferability.IMMEDIATE.tooltip = Constraints is checked on insert but can be deferred within a transaction.
+com.top_logic.basic.sql.DBDeferability.IMMEDIATE.tooltip = Constraint is checked on insert but can be deferred within a transaction.
 com.top_logic.basic.sql.DBDeferability.STRICT = Strict
 com.top_logic.basic.sql.DBDeferability.STRICT.tooltip = Constraint is checked on insert and cannot be deferred.
-com.top_logic.basic.sql.DBDeferability.tooltip = Actions for foreign key constraint.
+com.top_logic.basic.sql.DBDeferability.tooltip = Deferability of foreign key constraint.
 com.top_logic.basic.sql.DBHelper = Database helper
 com.top_logic.basic.sql.DBHelper.Config.adjust-from-connection = Adjust from connection
 com.top_logic.basic.sql.DBHelper.Config.adjust-from-connection.tooltip = Whether to adjust settings by querying the database. <p> Automatic adjustment can be disabled, e.g. if the SQL settings are configured for a connection pool. </p>
