Ticket #27514: Regenerate the i18n. Improve the German translations manually where necessary.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1600,7 +1600,7 @@ com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeColumnP
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeTablePattern = Tabellenausschlussmuster
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeTablePattern.tooltip = Regulärer Ausdruck für Tabellennamen, die nicht importiert werden sollen.
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.glossary = Glossar
-com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.glossary.tooltip = Durch Tabulatoren getrennte Werte, die Token und deren Ersetzung beim Import definieren.
+com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.glossary.tooltip = Eine Abbildung der Token und ihrer Ersetzung beim Import. <p> Das Token und seine Ersetzung werden durch ein Tab-Zeichen getrennt. Jedes Paar aus Token und Ersetzung steht in einer eigenen Zeile. Die Zeilen können entweder durch <code>\\n</code> oder <code>\\r\\n</code> getrennt werden. </p>
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.hide-primary-key-columns = Primärschlüsselspalten ausblenden
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.hide-primary-key-columns.tooltip = Ob Primärschlüsselspalten eine Annotation erhalten sollen, die sie standardmäßig aus der Benutzeroberfläche ausblendet.
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.poolName = Name des Pools
@@ -1609,22 +1609,22 @@ com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.tooltip = <i>Befehlsh
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding = Bindung an Spalte
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.format = Format
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.format.tooltip = Eine optionale Wertkonvertierung, die den Anwendungswert der Eigenschaft beim Export auf einen Spaltenwert abbildet.
-com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.name = Name
-com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.name.tooltip = Der Name der Spalte.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.parser = Parser
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.parser.tooltip = Eine optionale Wertkonvertierung, die den Spaltenwert beim Import auf einen Anwendungswert abbildet.
-com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.tooltip = <i>Attribut-Annotation</i>, die die Spalte angibt, an die die annotierte <i>Eigenschaft</i> beim Import/Export von/nach einem externen relationalen Schema gebunden ist. <p> Beim Import wird der Wert der Spalte verwendet, um die Eigenschaft festzulegen. Beim Export wird der Wert der Eigenschaft verwendet, um den Spaltenwert zu aktualisieren. </p>
+com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.tooltip = <i>Attribut-Annotation</i>, die die Spalte angibt, von/zu der die annotierte <i>Objekteigenschaft</i> beim Import/Export von/zu einem externen relationalen Schema gebunden wird. <p> Beim Import wird der Wert der Spalte verwendet, um die Eigenschaft zu setzen. Beim Export wird der Wert der Eigenschaft verwendet, um den Spaltenwert zu aktualisieren. </p>
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding = Bindung an Fremdschlüssel
-com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.columns = Rubriken
+com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.columns = Spalten
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.columns.tooltip = Die Spalten, deren Werte zur Identifizierung des Zielobjekts der annotierten <i>Referenz</i> verwendet werden.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.tooltip = <i>Attribut-Annotation</i> für eine <i>Referenz</i>, die das Zielobjekt anhand der Werte in den angegebenen Spalten identifiziert. <p> Das Zielobjekt wird gefunden, indem die Werte in den angegebenen Spalten mit den Werten der Primärschlüsselspalten der Zieltabelle verglichen werden. </p>
 com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding = Bindung an Verknüpfungstabelle
-com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.destination-key = Zielschlüssel
-com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.destination-key.tooltip = Gibt den Fremdschlüssel der Verknüpfungstabelle an, der auf die Werte der Referenz verweist.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.destination-columns = Zielspalten
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.destination-columns.tooltip = Gibt die Fremdschlüsselspalten der Verknüpfungstabelle an, die auf die Werte der Referenz verweisen.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.link-table = Link-Tabelle
 com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.link-table.tooltip = Der Name der Verknüpfungstabelle.
-com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.source-key = Quellschlüssel
-com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.source-key.tooltip = Gibt den Fremdschlüssel der Verknüpfungstabelle an, die auf das Quellobjekt verweist, das den mit Anmerkungen versehenen Verweis definiert.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.order-column = Spalte bestellen
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.order-column.tooltip = Das optionale Attribut order, um eine geordnete Referenz zu erstellen.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.source-columns = Quelle: Spalten
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.source-columns.tooltip = Gibt die Fremdschlüsselspalten der Verknüpfungstabelle an, die auf das Quellobjekt verweisen, das den mit Anmerkungen versehenen Verweis definiert.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.tooltip = <i>Attribut-Annotation</i> für eine Referenz, deren Werte aus einer separaten Verknüpfungstabelle mit zwei Fremdschlüsseln importiert werden sollen.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLReverseForeignKeyBinding = Bindung an Fremdschlüssel in Zieltabelle
 com.top_logic.element.model.jdbcBinding.api.annotate.TLReverseForeignKeyBinding.order-column = Ordnungsspalte
@@ -1633,8 +1633,6 @@ com.top_logic.element.model.jdbcBinding.api.annotate.TLReverseForeignKeyBinding.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLReverseForeignKeyBinding.target-columns.tooltip = Die Spalten, deren Werte zur Identifizierung des Zielobjekts der annotierten <i>Referenz</i> verwendet werden.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLReverseForeignKeyBinding.tooltip = <i>Attribut-Annotation</i> für eine <i>Referenz</i>, die die Zielobjekte anhand der Werte in den angegebenen Spalten identifiziert. <p> Die Zielobjekte werden durch den Vergleich der Werte in den angegebenen Spalten der Zieltabelle mit den Primärschlüsselspaltenwerten der Objekttabelle gefunden. </p> <p> Eine geordnete Referenz kann durch Angabe einer Ordnungsspalte importiert werden. Alle Objekte, die der Referenz zugeordnet werden sollen, werden dann nach den Werten in der angegebenen Ordnungsspalte geordnet. </p>
 com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding = Bindung an Tabelle
-com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.name = Name
-com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.name.tooltip = Der Name der Tabelle.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.primary-key = Primärschlüssel
 com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.primary-key.tooltip = Gibt den Primärschlüssel der Tabelle an, der verwendet wird, um über Fremdschlüssel auf Objekte zu verweisen.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.row-reader = Zeilenleser
