--- a/com.top_logic.basic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.basic/src/main/java/META-INF/messages_de.properties
@@ -1062,12 +1062,12 @@ com.top_logic.basic.sql.DBConstraintType.RESTRICT.tooltip = Die Klage wird abgew
 com.top_logic.basic.sql.DBConstraintType.tooltip = Aktionen für Fremdschlüsselbeschränkung.
 com.top_logic.basic.sql.DBDeferability = Aufschiebbarkeit
 com.top_logic.basic.sql.DBDeferability.DEFERRED = Aufgeschoben
-com.top_logic.basic.sql.DBDeferability.DEFERRED.tooltip = Die Einschränkung wird bei der Übertragung geprüft.
+com.top_logic.basic.sql.DBDeferability.DEFERRED.tooltip = Das Constraint wird bei der Übertragung geprüft.
 com.top_logic.basic.sql.DBDeferability.IMMEDIATE = Unmittelbar
-com.top_logic.basic.sql.DBDeferability.IMMEDIATE.tooltip = Constraints werden beim Einfügen geprüft, können aber innerhalb einer Transaktion zurückgestellt werden.
+com.top_logic.basic.sql.DBDeferability.IMMEDIATE.tooltip = Das Constraint wird beim Einfügen geprüft, kann aber innerhalb einer Transaktion zurückgestellt werden.
 com.top_logic.basic.sql.DBDeferability.STRICT = Streng
-com.top_logic.basic.sql.DBDeferability.STRICT.tooltip = Die Einschränkung wird beim Einfügen geprüft und kann nicht aufgeschoben werden.
-com.top_logic.basic.sql.DBDeferability.tooltip = Aktionen für die Fremdschlüssel-Beschränkung.
+com.top_logic.basic.sql.DBDeferability.STRICT.tooltip = Das Constraint wird beim Einfügen geprüft und kann nicht aufgeschoben werden.
+com.top_logic.basic.sql.DBDeferability.tooltip = Aufschiebbarkeit für Fremdschlüssel-Beziehungen.
 com.top_logic.basic.sql.DBHelper = Datenbank-Helfer
 com.top_logic.basic.sql.DBHelper.Config.adjust-from-connection = Einstellen von Verbindung
 com.top_logic.basic.sql.DBHelper.Config.adjust-from-connection.tooltip = Ob Einstellungen durch Abfragen der Datenbank angepasst werden sollen. <p> Die automatische Anpassung kann deaktiviert werden, z.B. wenn die SQL-Einstellungen für einen Verbindungspool konfiguriert sind. </p>
