--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1532,7 +1532,7 @@ com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeColumnP
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeTablePattern = Exclude table pattern
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.excludeTablePattern.tooltip = Regular expression matching table names that should not be imported.
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.glossary = Glossary
-com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.glossary.tooltip = Tab separated values defining tokens and their replacement during import.
+com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.glossary.tooltip = A map of tokens and their replacement during import. <p> The token and its replacement are separated by a tab character. Each pair of token and replacement are on their own line. Lines can be separated by either <code>\\n</code> or <code>\\r\\n</code>. </p>
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.hide-primary-key-columns = Hide primary key columns
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.hide-primary-key-columns.tooltip = Whether primary key columns should receive an annotation that hides them from the UI by default.
 com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.Config.poolName = Pool name
@@ -1541,22 +1541,22 @@ com.top_logic.element.model.jdbcBinding.JdbcSchemaImporter.tooltip = <i>Command 
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding = Column binding
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.format = Format
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.format.tooltip = An optional value conversion that maps the property's application value to a column value during export.
-com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.name = Name
-com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.name.tooltip = The name of the column.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.parser = Parser
 com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.parser.tooltip = An optional value conversion that maps the column value to an application value during import.
-com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.tooltip = <i>Attribute annotation</i> specifying the column from to which the annotated <i>property</i> is bound during import/export from/to an external relational schema. <p> During import, the value of the column is used to set the property. During export, the value of the property is used to update the column value. </p>
+com.top_logic.element.model.jdbcBinding.api.annotate.TLColumnBinding.tooltip = <i>Attribute annotation</i> specifying the column from/to which the annotated <i>object property</i> is bound during import/export from/to an external relational schema. <p> During import, the value of the column is used to set the property. During export, the value of the property is used to update the column value. </p>
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding = Foreign key binding
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.columns = Columns
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.columns.tooltip = The columns whose values are use to identify the target object of the annotated <i>reference</i>.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLForeignKeyBinding.tooltip = <i>Attribute annotation</i> for a <i>reference</i> that identifies the target object by the values in the given columns. <p> The target object is found by comparing the values in the given columns with the values of the primary key columns of the target table. </p>
 com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding = Link table binding
-com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.destination-key = Destination key
-com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.destination-key.tooltip = Specifies the foreign key of the link table that references the values of the reference.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.destination-columns = Destination columns
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.destination-columns.tooltip = Specifies the foreign key columns of the link table that reference the values of the reference.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.link-table = Link table
 com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.link-table.tooltip = The name of the link table.
-com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.source-key = Source key
-com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.source-key.tooltip = Specifies the foreign key of the link table that references the source object defining the annotated reference.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.order-column = Order column
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.order-column.tooltip = The optional order attribute to create an ordered reference.
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.source-columns = Source columns
+com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.source-columns.tooltip = Specifies the foreign key columns of the link table that reference the source object defining the annotated reference.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLLinkTableBinding.tooltip = <i>Attribute annotation</i> for a reference whose values should be imported form a separate link table with two foreign keys.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLReverseForeignKeyBinding = Reverse foreign key binding
 com.top_logic.element.model.jdbcBinding.api.annotate.TLReverseForeignKeyBinding.order-column = Order column
@@ -1565,8 +1565,6 @@ com.top_logic.element.model.jdbcBinding.api.annotate.TLReverseForeignKeyBinding.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLReverseForeignKeyBinding.target-columns.tooltip = The columns whose values are use to identify the target object of the annotated <i>reference</i>.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLReverseForeignKeyBinding.tooltip = <i>Attribute annotation</i> for a <i>reference</i> that identifies the target objects by the values in the given columns. <p> The target objects are found by comparing the values in the given columns from the target table with the primary key column values of the object table. </p> <p> An ordered reference can be imported by specifying an order column. All objects to be assigned to the reference are then ordered according the values in the specified order column. </p>
 com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding = Table binding
-com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.name = Name
-com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.name.tooltip = The name of the table.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.primary-key = Primary key
 com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.primary-key.tooltip = Specifies the primary key of the table that is used to reference objects through foreign keys.
 com.top_logic.element.model.jdbcBinding.api.annotate.TLTableBinding.row-reader = Row reader
