Ticket #28136: Allow to specify target mode when setting editor modes.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -3121,6 +3121,8 @@ com.top_logic.layout.form.component.PostCreateAction$WithTransform = Mit Transfo
 com.top_logic.layout.form.component.PostCreateAction$WithTransform.tooltip = Basisklasse für <i>UI-Aktionen</i>, die ihr Eingabemodell transformieren können.
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref = Komponente
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref.tooltip = Die Komponente zum Umschalten in den Bearbeitungsmodus.
+com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.mode = Modus
+com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.mode.tooltip = Der zu wählende Modus.
 com.top_logic.layout.form.component.PostCreateAction.SetModel.Config.target = Ziel
 com.top_logic.layout.form.component.PostCreateAction.SetModel.Config.target.tooltip = Der Zielkanal, auf den das neue Modell verbreitet werden soll.
 com.top_logic.layout.form.component.PostCreateAction.ShowComponent.Config.target-component = Zielkomponente
