--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3121,6 +3121,8 @@ com.top_logic.layout.form.component.PostCreateAction$WithTransform = With transf
 com.top_logic.layout.form.component.PostCreateAction$WithTransform.tooltip = Base class for <i>UI action</i> that can transform their input model.
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref = Component reference
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref.tooltip = The component to switch to edit mode.
+com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.mode = Mode
+com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.mode.tooltip = The mode to select.
 com.top_logic.layout.form.component.PostCreateAction.SetModel.Config.target = Target
 com.top_logic.layout.form.component.PostCreateAction.SetModel.Config.target.tooltip = The target channel to propagate the new model to.
 com.top_logic.layout.form.component.PostCreateAction.ShowComponent.Config.target-component = Target component
