Ticket #28136: Added UI actions to open URLs and close dialogs.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -3109,6 +3109,8 @@ com.top_logic.layout.form.component.PostCreateAction$CloseDialog = Dialog schlie
 com.top_logic.layout.form.component.PostCreateAction$CloseDialog.tooltip = Schließt den Dialog, in dem der ausgeführte Befehl definiert wurde.
 com.top_logic.layout.form.component.PostCreateAction$DeliverAsDownload = Als Download bereitstellen
 com.top_logic.layout.form.component.PostCreateAction$DeliverAsDownload.tooltip = Liefert das Ergebnis eines Befehls als Download. <p> Der Befehl muss einen Binärwert als Ergebnis erzeugen. </p>
+com.top_logic.layout.form.component.PostCreateAction$OpenUrlAction = URL öffnen
+com.top_logic.layout.form.component.PostCreateAction$OpenUrlAction.tooltip = UI-Aktion zum Öffnen einer externen URL als Antwort auf einen Befehl.
 com.top_logic.layout.form.component.PostCreateAction$SetEditMode = Bearbeitungsmodus einstellen
 com.top_logic.layout.form.component.PostCreateAction$SetEditMode.tooltip = <i>UI-Aktion</i> zur Aktivierung des Bearbeitungsmodus in einer Komponente mit <i>Bearbeitungsmodus</i>.
 com.top_logic.layout.form.component.PostCreateAction$SetModel = Modell setzen
@@ -3119,6 +3121,10 @@ com.top_logic.layout.form.component.PostCreateAction$UpdateComponent = Komponent
 com.top_logic.layout.form.component.PostCreateAction$UpdateComponent.tooltip = Aktualisiert eine angegebene Komponente. <p> Normalerweise werden Komponenten automatisch aktualisiert, wenn die von ihnen angezeigten Objekte aktualisiert werden. Wenn diese Aktualisierung in manchen Situationen nicht zuverlässig funktioniert, kann eine explizite Aktualisierung konfiguriert werden. </p>
 com.top_logic.layout.form.component.PostCreateAction$WithTransform = Mit Transformation
 com.top_logic.layout.form.component.PostCreateAction$WithTransform.tooltip = Basisklasse für <i>UI-Aktionen</i>, die ihr Eingabemodell transformieren können.
+com.top_logic.layout.form.component.PostCreateAction.OpenUrlAction.Config.newWindow = Neues Fenster
+com.top_logic.layout.form.component.PostCreateAction.OpenUrlAction.Config.newWindow.tooltip = Öffnet die URL in einem neuen Browserfenster. <p> Wenn diese Option deaktiviert ist, wird die URL im Anwendungsfenster geöffnet, das die aktuelle Sitzung ersetzt. Wenn dies im Hauptfenster geschieht, ist dies gleichbedeutend mit einer Abmeldung von der Anwendung (wenn keine anderen Fenster-Sub-Sessions geöffnet sind). </p>
+com.top_logic.layout.form.component.PostCreateAction.OpenUrlAction.Config.urlProvider = URL-Anbieter
+com.top_logic.layout.form.component.PostCreateAction.OpenUrlAction.Config.urlProvider.tooltip = Algorithmus zur Erstellung der zu öffnenden URL.
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref = Komponente
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref.tooltip = Die Komponente zum Umschalten in den Bearbeitungsmodus.
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.mode = Modus
