--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3109,6 +3109,8 @@ com.top_logic.layout.form.component.PostCreateAction$CloseDialog = Close dialog
 com.top_logic.layout.form.component.PostCreateAction$CloseDialog.tooltip = Closes the dialog where the executed command was defined in.
 com.top_logic.layout.form.component.PostCreateAction$DeliverAsDownload = Deliver as download
 com.top_logic.layout.form.component.PostCreateAction$DeliverAsDownload.tooltip = Provides the result of a command as download. <p> The command must create a binary value as result. </p>
+com.top_logic.layout.form.component.PostCreateAction$OpenUrlAction = Open URL
+com.top_logic.layout.form.component.PostCreateAction$OpenUrlAction.tooltip = UI action to open an external URL as response to a command.
 com.top_logic.layout.form.component.PostCreateAction$SetEditMode = Set edit mode
 com.top_logic.layout.form.component.PostCreateAction$SetEditMode.tooltip = <i>UI action</i> activating edit mode in an <i>edit mode</i> component.
 com.top_logic.layout.form.component.PostCreateAction$SetModel = Set model
@@ -3119,6 +3121,10 @@ com.top_logic.layout.form.component.PostCreateAction$UpdateComponent = Update co
 com.top_logic.layout.form.component.PostCreateAction$UpdateComponent.tooltip = Refreshes a specified component. <p> Normally, components are automatically refreshed when the objects they display are updated. If this refresh works not reliably in some situations, an explicit refresh can be configured. </p>
 com.top_logic.layout.form.component.PostCreateAction$WithTransform = With transform
 com.top_logic.layout.form.component.PostCreateAction$WithTransform.tooltip = Base class for <i>UI action</i> that can transform their input model.
+com.top_logic.layout.form.component.PostCreateAction.OpenUrlAction.Config.newWindow = New window
+com.top_logic.layout.form.component.PostCreateAction.OpenUrlAction.Config.newWindow.tooltip = Opens the URL in a new browser window. <p> If this is option is disabled, the URL is opened in the application window replacing the current session. When this happens in the main window, this is equivalent to a log-out from the application (if no other windows sub-sessions are currently open). </p>
+com.top_logic.layout.form.component.PostCreateAction.OpenUrlAction.Config.urlProvider = URL provider
+com.top_logic.layout.form.component.PostCreateAction.OpenUrlAction.Config.urlProvider.tooltip = Algorithm constructing the URL to open.
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref = Component reference
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.component-ref.tooltip = The component to switch to edit mode.
 com.top_logic.layout.form.component.PostCreateAction.SetEditMode.Config.mode = Mode
