--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -121,6 +121,7 @@ class.com.top_logic.layout.structure.I18NConstants.TOGGLE_MINIMIZE_LABEL = Umsch
 class.com.top_logic.layout.structure.I18NConstants.UPDATE_DIALOG_SIZE = Aktualisierung der Dialoggröße
 class.com.top_logic.layout.structure.I18NConstants.UPDATE_LAYOUT_SIZE = Aktualisierung der Layoutgröße
 class.com.top_logic.layout.structure.I18NConstants.UPDATE_MAXIMIZED = Maximiert geändert
+class.com.top_logic.layout.structure.embedd.I18NConstants.EMBEDD_ON_CLOSE = Eingebettete Ansicht schließen
 class.com.top_logic.layout.table.export.I18NConstants.DEFAULT_EXPORT_SHEET_NAME = Daten
 class.com.top_logic.layout.table.export.I18NConstants.DOWNLOAD = Herunterladen
 class.com.top_logic.layout.table.export.I18NConstants.DOWNLOAD.tooltip = Generierte Exportdaten herunterladen.
@@ -5398,6 +5399,10 @@ com.top_logic.layout.structure.VersionViewConfiguration.VersionModel.application
 com.top_logic.layout.structure.VersionViewConfiguration.VersionModel.version = Gibt den Versionsstring mit optionalen Umgebungsinformationen wieder.
 com.top_logic.layout.structure.VersionViewConfiguration.tooltip = Fabrik für eine Ansicht, die in der Statusleiste der Anwendung angezeigt wird.
 com.top_logic.layout.structure.WrappingControl.child = Diese Methode gibt das umhüllte Steuerelement zurück.
+com.top_logic.layout.structure.embedd.EmbeddedViewControlProvider = Fabrik für eingebettete Ansichten
+com.top_logic.layout.structure.embedd.EmbeddedViewControlProvider.Config.urlProvider = URL-Anbieter
+com.top_logic.layout.structure.embedd.EmbeddedViewControlProvider.Config.urlProvider.tooltip = Algorithmus zur Erstellung der anzuzeigenden URL.
+com.top_logic.layout.structure.embedd.EmbeddedViewControlProvider.tooltip = <i>Berechnung</i> für z.B. eine <i>Komponente</i> zur <i>Layout-Steuerung</i>, um ein Micro-Frontend einer anderen Anwendung über ein <code>iframe</code> einzubetten.
 com.top_logic.layout.structure.sidebar.SidebarLayoutControlProvider = Berechnung des Seitenleistenlayouts
 com.top_logic.layout.structure.sidebar.SidebarLayoutControlProvider.Config.accordion = Akkordeon
 com.top_logic.layout.structure.sidebar.SidebarLayoutControlProvider.Config.accordion.tooltip = Verwenden Sie eine Akkordeon-Seitenleiste anstelle eines blätterbaren Navigationsbaums.
