--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1141,6 +1141,11 @@ com.top_logic.model.search.providers.TreeTableDragSourceByExpression = Tree tabl
 com.top_logic.model.search.providers.TreeTableDragSourceByExpression.tooltip = <i>Table drag source by expression</i> for tree tables.
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression = Tree table drop target by expression
 com.top_logic.model.search.providers.TreeTableDropTargetByExpression.tooltip = <i>Table drop target</i> for tree tables that can be completely configured using model queries.
+com.top_logic.model.search.providers.UrlProviderByExpression = URL provider by expression
+com.top_logic.model.search.providers.UrlProviderByExpression.Config.model = Model
+com.top_logic.model.search.providers.UrlProviderByExpression.Config.model.tooltip = The component channel to take the argument for the URL creation from.
+com.top_logic.model.search.providers.UrlProviderByExpression.Config.url = URL
+com.top_logic.model.search.providers.UrlProviderByExpression.Config.url.tooltip = Function constructing the URL to open. <p> The function receives either the value of the component channel, or the context model if no other model was specified as argument. </p>
 com.top_logic.model.search.providers.ValueListenerByExpression = Value listener with TL-Script
 com.top_logic.model.search.providers.ValueListenerByExpression.Config.operation = Operation
 com.top_logic.model.search.providers.ValueListenerByExpression.Config.operation.tooltip = TL-Script that is executed when the value of the field for the annotated attribute changes. <p> The operation gets four arguments: the object, the new field value, the old field value, and the annotated attribute. </p>
