--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6444,6 +6444,8 @@ com.top_logic.mig.html.layout.ComponentReference = Referenz der Komponente
 com.top_logic.mig.html.layout.ComponentReference.name = Name
 com.top_logic.mig.html.layout.ComponentReference.name.tooltip = Der <i>Komponentenname</i> der referenzierten <i>Komponente</i>.
 com.top_logic.mig.html.layout.ComponentReference.tooltip = Referenz auf eine <i>Komponente</i> innerhalb eines Komponentenbaums, die durch ihren Namen identifiziert wird.
+com.top_logic.mig.html.layout.DefaultComponent = Standardkomponente
+com.top_logic.mig.html.layout.DefaultComponent.tooltip = Generische Komponente, die über eine <i>Layout-Control-Berechnung</i> angezeigt werden kann. <p> Im Gegensatz zu einer <i>Layout-Control-Komponente</i> nimmt diese Komponente wie andere reguläre Komponenten an Zugriffsprüfungen teil. </p>
 com.top_logic.mig.html.layout.DialogInfo = Informationen zum Dialog
 com.top_logic.mig.html.layout.DialogInfo.closableUsingX = Schließbar mit X
 com.top_logic.mig.html.layout.DialogInfo.closableUsingX.tooltip = Ob dieser Dialog über die 'X'-Schaltfläche in der Titelleiste geschlossen werden kann.
