--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -6444,6 +6444,8 @@ com.top_logic.mig.html.layout.ComponentReference = Component reference
 com.top_logic.mig.html.layout.ComponentReference.name = Name
 com.top_logic.mig.html.layout.ComponentReference.name.tooltip = The <i>component name</i> of the referenced <i>component</i>.
 com.top_logic.mig.html.layout.ComponentReference.tooltip = Reference to a <i>component</i> within a component tree identified by its name.
+com.top_logic.mig.html.layout.DefaultComponent = Default component
+com.top_logic.mig.html.layout.DefaultComponent.tooltip = Generic component that can be displayed using a <i>layout control provider</i>. <p> In contrast to a <i>layout control component</i>, this component takes part in access checks as other regular components. </p>
 com.top_logic.mig.html.layout.DialogInfo = Dialog info
 com.top_logic.mig.html.layout.DialogInfo.closableUsingX = Closable using X
 com.top_logic.mig.html.layout.DialogInfo.closableUsingX.tooltip = Whether this dialog can be closed using the 'X'-button in the title bar.
