--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1156,6 +1156,11 @@ com.top_logic.model.search.providers.ValueTransformationByExpression.Config.adit
 com.top_logic.model.search.providers.ValueTransformationByExpression.Config.function = Function
 com.top_logic.model.search.providers.ValueTransformationByExpression.Config.function.tooltip = The transformation to apply to the input value and potentially given additional arguments. <p> The function receives the value of the input as first argument and for each configured additional argument another value. </p>
 com.top_logic.model.search.providers.ValueTransformationByExpression.tooltip = <i>Value transformation</i> that can be implemented in TL-Script. <p> The transformation can receive additional arguments from configured component channels. </p>
+com.top_logic.model.search.providers.UrlProviderByExpression = URL provider by expression
+com.top_logic.model.search.providers.UrlProviderByExpression.Config.model = Model
+com.top_logic.model.search.providers.UrlProviderByExpression.Config.model.tooltip = The component channel to take the argument for the URL creation from.
+com.top_logic.model.search.providers.UrlProviderByExpression.Config.url = URL
+com.top_logic.model.search.providers.UrlProviderByExpression.Config.url.tooltip = Function constructing the URL to open. <p> The function receives either the value of the component channel, or the context model if no other model was specified as argument. </p>
 com.top_logic.model.search.providers.toggle.ChannelStateHandler = Component channel state
 com.top_logic.model.search.providers.toggle.ChannelStateHandler.Config.state-channel = State channel
 com.top_logic.model.search.providers.toggle.ChannelStateHandler.Config.state-channel.tooltip = The component channel to take button states from and to store state updates to.
