Ticket #27514: Improve two messages that sound very weird in-app and in German.

--- a/com.top_logic.basic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.basic/src/main/java/META-INF/messages_de.properties
@@ -795,9 +795,9 @@ com.top_logic.basic.format.NumberFormatDefinition.NumberStyle.PERCENT = Prozent
 com.top_logic.basic.format.NumberFormatDefinition.tooltip = <i>Formatdefinition</i> zur Erstellung eines offiziellen <i>Zahlenformats</i>, das sich an das Gebietsschema des Benutzers anpasst.
 com.top_logic.basic.format.NumberFormatResult = Typ des formattierten Wertes
 com.top_logic.basic.format.NumberFormatResult.DOUBLE = Flieﬂkommazahl
-com.top_logic.basic.format.NumberFormatResult.DOUBLE.tooltip = Immer eine <i>doppelte</i> Zahl.
+com.top_logic.basic.format.NumberFormatResult.DOUBLE.tooltip = Immer eine Flieﬂkommazahl.
 com.top_logic.basic.format.NumberFormatResult.LONG = Ganzzahl
-com.top_logic.basic.format.NumberFormatResult.LONG.tooltip = Es handelt sich immer um eine <i>lange</i> Zahl; die Analyse schl‰gt fehl, wenn Nachkommastellen eingegeben wurden.
+com.top_logic.basic.format.NumberFormatResult.LONG.tooltip = Immer eine Ganzzahl. Das Parsen scheitert, wenn Nachkommastellen eingegeben wurden.
 com.top_logic.basic.format.NumberFormatResult.NUMBER = Zahl
 com.top_logic.basic.format.NumberFormatResult.NUMBER.tooltip = Beliebige <i>Zahl</i>, abh‰ngig von der tats‰chlichen Benutzereingabe.
 com.top_logic.basic.format.NumberFormatResult.tooltip = Art des Ergebnisses, das ein <i>Zahlenformat</i> erzeugen soll.
