--- a/com.top_logic.basic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.basic/src/main/java/META-INF/messages_en.properties
@@ -795,9 +795,9 @@ com.top_logic.basic.format.NumberFormatDefinition.NumberStyle.PERCENT = Percent
 com.top_logic.basic.format.NumberFormatDefinition.tooltip = <i>Format definition</i> creating an official <i>number format</i> that adjusts to the user's locale.
 com.top_logic.basic.format.NumberFormatResult = Number format result
 com.top_logic.basic.format.NumberFormatResult.DOUBLE = Double
-com.top_logic.basic.format.NumberFormatResult.DOUBLE.tooltip = Always a <i>double</i> number.
+com.top_logic.basic.format.NumberFormatResult.DOUBLE.tooltip = Always a floating point number.
 com.top_logic.basic.format.NumberFormatResult.LONG = Long
-com.top_logic.basic.format.NumberFormatResult.LONG.tooltip = Always a <i>long</i> number, parsing fails, if any fractional digits have been entered.
+com.top_logic.basic.format.NumberFormatResult.LONG.tooltip = Always an integer, parsing fails, if any fractional digits have been entered.
 com.top_logic.basic.format.NumberFormatResult.NUMBER = Number
 com.top_logic.basic.format.NumberFormatResult.NUMBER.tooltip = Any <i>number</i> depending on the actual user input.
 com.top_logic.basic.format.NumberFormatResult.tooltip = Type of result a <i>number format</i> should produce.
